--- a/src/brandaniethical/pyproject.toml
+++ b/src/brandaniethical/pyproject.toml
@@ -7,6 +7,10 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+pandas = "^1.3.5"
+lxml = "^4.7.1"
+requests = "^2.26.0"
+bs4 = "^0.0.1"
 
 [tool.poetry.dev-dependencies]
 
