--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,16 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8.8"
+pandas = "^1.3.5"
+lxml = "^4.7.1"
+requests = "^2.26.0"
+bs4 = "^0.0.1"
 
 [tool.poetry.dev-dependencies]
 myst-nb = "^0.13.1"
 sphinx-autoapi = "^1.8.4"
 sphinx-rtd-theme = "^1.0.0"
+pytest = "^6.2.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
