--- a/src/brandaniethical/pyproject.toml
+++ b/src/brandaniethical/pyproject.toml
@@ -13,6 +13,8 @@ requests = "^2.26.0"
 bs4 = "^0.0.1"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.5"
+pytest-cov = "^3.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
