--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pandas = "^1.3.5"
 lxml = "^4.7.1"
 requests = "^2.26.0"
 bs4 = "^0.0.1"
+pytest = "^6.2.5"
 
 [tool.poetry.dev-dependencies]
 myst-nb = "^0.13.1"
